--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,9 @@
 /**/
+    body{
+        background-color: skyblue;
+        
+    }
+
     #minuteStr {
         color: #ff0000;
         font-size: 20px;
@@ -39,6 +44,8 @@
         position:absolute; top:10px; 
         left:10px; right:10px;
     }
+
+    
     
     #btnA {
         font-size: 20px;
