--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,7 @@
     button{
         color: blue;
         font-family: 'Times', Times, serif;
+        border-radius: 20px;
     }
 
     #minuteStr {
