css:btnA,B,Cの色とフォントのサイズを変更html:残り時間によって背景色を変更するようにした

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -65,12 +65,16 @@
     }
     
     #btnB {
+        background-color: yellow;
+        color: green;
         font-size: 20px;
         position:absolute; top:380px; left:45%; width:25%; height:60px; 
     }
 
     #btnC {
-        font-size: 10px;
+        background-color: yellow;
+        color: green;
+        font-size: 25px;
         position:absolute; top:380px; left:70%; width:28%; height:60px; 
     }
     
@@ -81,7 +85,9 @@
     
     #second {
         font-size: 30px;
-        position:absolute; top:450px; left:190px; width:80px; height:40px;   
+        position:absolute; top:450px; left:190px; width:80px; height:50px;   
     }
+
     
+
     input[type=number] {text-align: right;}
